--- a/source/stylesheets/video.css.scss
+++ b/source/stylesheets/video.css.scss
@@ -42,10 +42,21 @@
 }
 @media only screen and (min-width: 768px) {
   .modal-dialog {
-    .close {
-      font-size: 80px;
-      margin: 10px -10px -10px 30px;
+    .modal-content {
+      .close {
+        font-size: 80px;
+        margin: 10px -10px -10px 30px;
+      }
     }
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .modal.fade .modal-dialog {
+    -webkit-transition: -webkit-transform 0.3s ease-out;
+    -moz-transition: -moz-transform 0.3s ease-out;
+    -o-transition: -o-transform 0.3s ease-out;
+    transition: transform 0.3s ease-out;
   }
 }
 
