--- a/source/contacts.html.erb
+++ b/source/contacts.html.erb
@@ -11,7 +11,7 @@ title: "שולחן לשניים | צור קשר"
       </div>
       <h2 class="title-blue">צור איתנו קשר</h2>
       <div class="sidebar-link">
-        <a href="mailto:hello@tablefortwo.org.il">hello@tablefortwo.org.il</a>
+        <a href="mailto:<%= data.generic.settings.email %>"><%= data.generic.settings.email %></a>
       </div>
     </aside>
     <div class="contant">
