--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
   <div class="banner section-blue">
     <div class="container-small">
       <h2> בכל הזמנת ארוחה עם <span>תן ביס</span><br>תורמים שקל לילד שזקוק לארוחה</h2>
-      <a href="#" class="btn">הצטרף עכשיו</a>
+      <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">הצטרף עכשיו</a>
       <div class="banner-media">
         <div class="banner-media-inner">
           <button type="button" class="btn-reset btn-play" data-toggle="modal" data-target="#video-modal" data-theVideo="https://www.youtube.com/embed/HieorPee6KM">
@@ -49,8 +49,8 @@
               <img src="images/img_03.png" alt="" />
             </figure>
             <figcaption class="option-caption">
-            <h4>3. עוזרים לילדים שזקוקים לארוחה.</h4>
-            <p> הכסף במלואו הולך ישירות <br> לילדים שזקוקים לו.</p>
+              <h4>3. עוזרים לילדים שזקוקים לארוחה.</h4>
+              <p> הכסף במלואו הולך ישירות <br> לילדים שזקוקים לו.</p>
             </figcaption>
           </div>
         </li>
@@ -63,7 +63,7 @@
   <div class="section-separator section-blue fly-in animated-content">
     <div class="container-small">
       <p>נכון שזה למטרה טובה?..</p>
-      <a href="#" class="btn">קליק אחד וזהו</a>
+      <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">קליק אחד וזהו</a>
     </div>
   </div>
   <!-- /section-separator -->
@@ -97,7 +97,7 @@
   <div class="section-separator section-blue fly-in animated-content">
     <div class="container-small">
       <p>עכשיו כבר בטוח השתכנעתם!</p>
-      <a href="#" class="btn">יאללה תקליקו</a>
+      <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">יאללה תקליקו</a>
     </div>
   </div>
   <!-- /section-separator -->
