--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -21,7 +21,7 @@
 }
 
 .foot-top-link a {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans Hebrew';
   font-size: 27px;
   line-height: 1;
   color: #64c0eb;
@@ -58,7 +58,7 @@
 }
 
 .foot-middle-logo {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans Hebrew';
   font-size: 21px;
   line-height: 1;
   a {
