--- a/source/stylesheets/sections.css.scss
+++ b/source/stylesheets/sections.css.scss
@@ -1,7 +1,7 @@
 /* 5.0 Sections
 ***************************** */
 body{
-    font-family: 'fb_duvshanitregular';
+    font-family: 'Open Sans Hebrew';
     font-size: 17px;
     line-height: 1.3;
     color: #000000;
