btn style updated

--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -1,5 +1,5 @@
 /* 8.0 Footer
-***************************** */
+ ***************************** */
 /* Footer Top */
 
 .foot-top {
@@ -58,7 +58,7 @@
 }
 
 .foot-middle-logo {
-  font-family: 'Open Sans Hebrew';
+  font-family: 'Open Sans', sans-serif;
   font-size: 21px;
   line-height: 1;
   a {
