change sidebar max width

--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -6,23 +6,12 @@ title: "שולחן לשניים | השגרירים שלנו"
   <div class="container-main clearfix">
     <aside class="sidebar">
       <div class="sidebar-img">
-        <img src="images/sidebar_ambassadors_img.png" alt=""  />
+        <img src="images/sidebar_ambassadors_img.png" alt="שגריר של שולן לשמנים"  />
       </div>
       <h2 class="title-blue">בואו להיות שגרירים לשתף ולעזור</h2>
-      <form class="sidebar-form" action="" method="">
-        <div class="form-group">
-          <input class="form-control" type="text" placeholder="שם החברה" />
-        </div>
-        <div class="form-group">
-          <input class="form-control" type="text" placeholder="כתובת המייל שלך" />
-        </div>
-        <div class="form-group">
-          <input class="form-control" type="text" placeholder="מספר טלפון" />
-        </div>
         <div class="sidebar-btn text-center">
-          <input class="btn" type="submit" value="קליק אחד וזהו" />
+          <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">קליק אחד וזהו</a>
         </div>
-      </form>
     </aside>
     <div class="contant">
       <ul class="row">
