--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -13,7 +13,9 @@ title: "שולחן לשניים | אודות"
       </h2>
       <p>עכשיו השתכנעתם? </p>
       <div class="sidebar-btn text-center">
-        <input class="btn" type="submit" value="קליק אחד וזהו" />
+        <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">
+          קליק אחד וזהו
+        </a>
       </div>
     </aside>
     <div class="contant">
