ambasaddor cta explain

--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -8,10 +8,14 @@ title: "שולחן לשניים | השגרירים שלנו"
       <div class="sidebar-img">
         <img src="images/sidebar_ambassadors_img.png" alt="שגריר של שולן לשמנים"  />
       </div>
-      <h2 class="title-blue">בואו להיות שגרירים לשתף ולעזור</h2>
-        <div class="sidebar-btn text-center">
-          <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">קליק אחד וזהו</a>
-        </div>
+      <h2 class="title-blue">בואו להיות שגרירים של מעשים טובים!</h2>
+      <p class="explain">
+        שתפו את שולחן לשניים עם חבריכם בארגון<br/>
+        ואפשרו גם להם לעזור
+      </p>
+      <div class="sidebar-btn text-center">
+        <a href="<%= data.generic.settings.signup_link %>" class="btn" target="_blank">קליק אחד וזהו</a>
+      </div>
     </aside>
     <div class="contant">
       <ul class="row">
