--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -8,10 +8,8 @@ title: "שולחן לשניים | שאלות ותשובות"
       <div class="sidebar-img">
         <img src="images/sidebar_q&a_img.png" alt=""  />
       </div>
-      <h2 class="title-blue">שאלות ותשובות...
-        <!-- <span>lorem Ipsum has been the</span> -->
-      </h2>
-      <p>יש לך עוד שאלות?</p>
+      <h2 class="title-blue">שאלות ותשובות...</h2>
+      <p class="explain">יש לך עוד שאלות?</p>
       <div class="sidebar-btn text-center" >
         <a class="btn" type="submit"  href="/contacts.html">לחץ פה</a>
       </div>
