--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -45,5 +45,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.3.3/jquery.appear.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <%= javascript_include_tag  "application" %>
+    <%= google_analytics_universal_tag %>
   </body>
 </html>
