fix contact us on mobile

--- a/source/contacts.html.erb
+++ b/source/contacts.html.erb
@@ -5,7 +5,7 @@ title: "שולחן לשניים | צור קשר"
 <!-- Main -->
 <section class="main">
   <div class="container-main clearfix">
-    <aside class="sidebar">
+    <aside class="sidebar hidden-xs">
       <div class="sidebar-img">
         <img src="images/sidebar_contact_img.png" alt="Contact us Table for two"  />
       </div>
@@ -16,7 +16,7 @@ title: "שולחן לשניים | צור קשר"
     </aside>
     <div class="contant">
       <div class="envelope-box">
-        <img src="images/contact_bg.png" alt="" />
+        <img src="images/contact_bg.png" alt="contact us" />
         <div class="envelope-box-form">
           <div class="envelope-box-form-inner">
             <h3>צור איתנו קשר</h3>
