--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -8,7 +8,7 @@
 
     <!-- Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <!-- Styles -->
     <%= stylesheet_link_tag "application" %>
 
