--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -63,7 +63,7 @@
   <div class="section-separator section-blue fly-in animated-content">
     <div class="container-small">
       <p>נכון שזה למטרה טובה?..</p>
-      <a href="<%= data.generic.settings.signup_link %>&utm_content=2 class="btn" target="_blank">
+      <a href="<%= data.generic.settings.signup_link %>&utm_content=2" class="btn" target="_blank">
         להרשמה
       </a>
     </div>
