--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,7 @@
         <li class="col-sm-4">
           <div class="col-box">
             <figure class="option-img">
-              <img src="images/img_01.png" alt="" />
+              <%= image_tag "img_01.png" %>
             </figure>
             <figcaption class="option-caption">
             <h4>1. מצטרפים לשולחן לשניים</h4>
@@ -35,7 +35,7 @@
         <li class="col-sm-4">
           <div class="col-box">
             <figure class="option-img">
-              <img src="images/img_02.png" alt="" />
+              <%= image_tag "img_02.png" %>
             </figure>
             <figcaption class="option-caption">
             <h4>2. תורמים שקל אחד</h4>
@@ -46,7 +46,7 @@
         <li class="col-sm-4">
           <div class="col-box">
             <figure class="option-img">
-              <img src="images/img_03.png" alt="" />
+              <%= image_tag "img_03.png" %>
             </figure>
             <figcaption class="option-caption">
               <h4>3. עוזרים לילדים שזקוקים לארוחה.</h4>
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-sm-2 mobile-hidden">
             <div class="participant-img">
-              <img src="images/participant_01.png" alt="" />
+              <%= image_tag "participant_01.png" %>
             </div>
           </div>
           <div class="col-sm-10 col-xs-12">
@@ -113,10 +113,10 @@
       <div class="logos-block fly-in animated-content">
         <ul class="row">
           <% (1..3).each do |i| %>
-            <% big_logo = "logo_#{i}" %>
+            <% big_logo = "logo_#{i}.png" %>
             <li class="col-sm-4">
               <div class="logo-box">
-                <img src="images/<%= big_logo %>.png" alt="<%= big_logo %>" />
+                <%= image_tag big_logo %>
               </div>
             </li>
           <% end %>
@@ -124,10 +124,10 @@
       </div>
       <ul class="logos-small-block fly-in animated-content">
         <% (4..14).each do |i| %>
-          <% small_logo = "logo_#{i}" %>
+          <% small_logo = "logo_#{i}.png" %>
           <li>
             <div class="logo-small-box">
-              <img src="images/<%= small_logo %>.png" alt="<%= small_logo %>" />
+              <%= image_tag small_logo %>
             </div>
           </li>
         <% end %>
