image tag updated on about page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,7 +6,7 @@ title: "שולחן לשניים | אודות"
   <div class="container-main clearfix">
     <aside class="sidebar">
       <div class="sidebar-img">
-        <img src="images/sidebar_about_img.png" alt=""  />
+        <%= image_tag "sidebar_about_img.png" %>
       </div>
       <h2 class="title-blue">אנחנו במספרים
         <span>זה מה שאחנו עושים עם<br> השקלים שנאספו עד כה</span>
@@ -23,7 +23,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_03.png" alt="name" />
+              <%= image_tag "about_img_03.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>מסייעים לכ-39,570 ילדים בישראל </p>
@@ -33,7 +33,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_02.png" alt="name" />
+              <%= image_tag "about_img_02.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>
@@ -45,7 +45,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_01.png" alt="name" />
+              <%= image_tag "about_img_01.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>תומכים בך- 15,828 משפחות הסובלות מאי ביטחון תזונתי</p>
@@ -55,7 +55,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_05.png" alt="name" />
+              <%= image_tag "about_img_05.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>סיוע ותמיכה בפעילותם של 120 עמותות וארגוני מזון מקומיים</p>
@@ -65,7 +65,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_06.png" alt="name" />
+              <%= image_tag "about_img_06.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>פועלים ב-97 ישובים בארץ</p>
@@ -75,7 +75,7 @@ title: "שולחן לשניים | אודות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="about-box box">
             <figure class="about-img box-img">
-              <img src="images/about_img_04.png" alt="name" />
+              <%= image_tag "about_img_04.png" %>
             </figure>
             <figcaption class="about-info box-info">
             <p>חיזוק המודעות הציבורית לבעית אי בטחון תזונתי</p>
