--- a/source/ambassadors.html.erb
+++ b/source/ambassadors.html.erb
@@ -6,7 +6,7 @@ title: "שולחן לשניים | השגרירים שלנו"
   <div class="container-main clearfix">
     <aside class="sidebar">
       <div class="sidebar-img">
-        <img src="images/sidebar_ambassadors_img.png" alt="שגריר של שולן לשמנים"  />
+        <%= image_tag "sidebar_ambassadors_img.png", alt: "שגריר של שולן לשמנים"  %>
       </div>
       <h2 class="title-blue">בואו להיות שגרירים של מעשים טובים!</h2>
       <p class="explain">
@@ -22,7 +22,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="ambassador-box">
             <figure class="ambassador-img">
-              <img src="images/ambassador_01.png" alt="name" />
+              <%= image_tag "ambassador_01.png" %>
             </figure>
             <figcaption class="ambassador-info">
             <h3>נטלי בן דוד</h3>
@@ -36,7 +36,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="ambassador-box">
             <figure class="ambassador-img">
-              <img src="images/ambassador_02.png" alt="name" />
+              <%= image_tag "ambassador_02.png" %>
             </figure>
             <figcaption class="ambassador-info">
             <h3>יובל קשטכר</h3>
@@ -49,7 +49,7 @@ title: "שולחן לשניים | השגרירים שלנו"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="ambassador-box">
             <figure class="ambassador-img">
-              <img src="images/ambassador_03.png" alt="name" />
+              <%= image_tag "ambassador_03.png" %>
             </figure>
             <figcaption class="ambassador-info">
               <h3>ענבל גילאי</h3>
