--- a/source/contacts.html.erb
+++ b/source/contacts.html.erb
@@ -7,7 +7,7 @@ title: "שולחן לשניים | צור קשר"
   <div class="container-main clearfix">
     <aside class="sidebar hidden-xs">
       <div class="sidebar-img">
-        <img src="images/sidebar_contact_img.png" alt="Contact us Table for two"  />
+        <%= image_tag "sidebar_contact_img.png", alt: "Contact us Table for two"  %>
       </div>
       <h2 class="title-blue">צור איתנו קשר</h2>
       <div class="sidebar-link">
@@ -16,7 +16,7 @@ title: "שולחן לשניים | צור קשר"
     </aside>
     <div class="contant">
       <div class="envelope-box">
-        <img src="images/contact_bg.png" alt="contact us" />
+        <%= image_tag "contact_bg.png", alt: "contact us" %>
         <div class="envelope-box-form">
           <div class="envelope-box-form-inner">
             <h3>צור איתנו קשר</h3>
