--- a/source/layouts/_header.html.erb
+++ b/source/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <button id="menu-open" class="menu-toggle mobile-visiable btn-reset"><i class="icon icon-menu"></i></button>
       <h1 class="head-logo">
         <a href="/index.html">
-          <img src="images/head-logo.png" alt="logo name" />
+          <%= image_tag "head-logo.png", alt: "table for two logo" %>
         </a>
       </h1>
       <nav class="head-nav mobile-hidden">
