--- a/source/questions_and_answers.html.erb
+++ b/source/questions_and_answers.html.erb
@@ -6,7 +6,7 @@ title: "שולחן לשניים | שאלות ותשובות"
   <div class="container-main clearfix">
     <aside class="sidebar">
       <div class="sidebar-img">
-        <img src="images/sidebar_q&a_img.png" alt=""  />
+        <%= image_tag "sidebar_qa_img.png" %>
       </div>
       <h2 class="title-blue">שאלות ותשובות...</h2>
       <p class="explain">יש לך עוד שאלות?</p>
@@ -19,7 +19,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_01.png" alt="name" />
+              <%= image_tag "qa_01.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>מתי כדאי להרשם וכמה זמן זה יקח?</h3>
@@ -30,7 +30,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_02.png" alt="name" />
+              <%= image_tag "qa_02.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>מתי אפשר להפסיק וכמה זמן זה לוקח?</h3>
@@ -41,7 +41,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_03.png" alt="name" />
+              <%= image_tag "qa_03.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>מהו חוסר ביטחון תזונתי?</h3>
@@ -52,7 +52,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_04.png" alt="name" />
+              <%= image_tag "qa_04.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>איך זה יראה בחשבון הבנק שלי?</h3>
@@ -63,7 +63,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_05.png" alt="name" />
+              <%= image_tag "qa_05.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>האם סכום התרומה יכול להשתנות?</h3>
@@ -74,7 +74,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_06.png" alt="name" />
+              <%= image_tag "qa_06.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>למי תעבירו את המידע שלי וכמה פעמים תתקשרו לבקש עוד תרומות?</h3>
@@ -85,7 +85,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_07.png" alt="name" />
+              <%= image_tag "qa_07.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>אז כמה כסף אתם רוצים?</h3>
@@ -96,7 +96,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_08.png" alt="name" />
+              <%= image_tag "qa_08.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>לאן הולך הכסף שנאסף?</h3>
@@ -107,7 +107,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_09.png" alt="name"/>
+              <%= image_tag "qa_09.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>האם כל הכסף ילך לתרומה? </h3>
@@ -118,7 +118,7 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_10.png" alt="name" />
+              <%= image_tag "qa_10.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>מאיפה ירד הכסף?</h3>
@@ -129,11 +129,14 @@ title: "שולחן לשניים | שאלות ותשובות"
         <li class="col-lg-4 col-md-6 fly-in animated-content">
           <div class="box">
             <figure class="box-img">
-              <img src="images/q&a_11.png" alt="name" />
+              <%= image_tag "qa_11.png" %>
             </figure>
             <figcaption class="box-info">
             <h3>ואם אני רוצה לדעת עוד?</h3>
-            <p>נשמח לתת לך מידע נוסף בכתובת המייל shulchan4two@gmail.com ובאתר www.latet.org.il</p>
+            <p>נשמח לתת לך מידע נוסף בכתובת המייל
+              <%= data.generic.settings.email %> ובאתר
+              <a href="//www.latet.org.il" target="_blank">www.latet.org.il</a>
+            </p>
             </figcaption>
           </div>
         </li>
