--- a/source/layouts/_footer_sponsers.html.erb
+++ b/source/layouts/_footer_sponsers.html.erb
@@ -3,37 +3,37 @@
     <ul class="foot-sponsors clearfix">
       <li>
         <a href="http://www.weforum.org/community/global-shapers" target="_blank">
-          <img src="images/sponsor_01.jpg" alt="Global Shapers community" />
+          <%= image_tag "sponsor_01.jpg", alt: "Global Shapers community" %>
         </a>
       </li>
       <li>
         <a href="http://www.telepay.co.il/" target="_blank">
-          <img src="images/sponsor_02.jpg" alt="Telepay" />
+          <%= image_tag "sponsor_02.jpg", alt: "Telepay" %>
         </a>
       </li>
       <li>
         <a href="http://astrails.com" target="_blank">
-          <img src="images/astrails_logo.png" alt="Astrails" />
+          <%= image_tag "astrails_logo.png", alt: "Astrails" %>
         </a>
       </li>
       <li>
         <a href="http://tross.co/" target="_blank">
-          <img src="images/sponsor_03.jpg" alt="Tross" />
+          <%= image_tag "sponsor_03.jpg", alt: "Tross" %>
         </a>
       </li>
       <li>
         <a href="https://www.10bis.co.il/" target="_blank">
-          <img src="images/sponsor_04.jpg" alt="10bis" />
+          <%= image_tag "sponsor_04.jpg", alt: "10bis" %>
         </a>
       </li>
       <li>
         <a href="http://www.shenhavlaw.com/" target="_blank">
-          <img src="images/sponsor_05.jpg" alt="Shenhav" />
+          <%= image_tag "sponsor_05.jpg", alt: "Shenhav" %>
         </a>
       </li>
       <li>
         <a href="http://www.latet.org.il" target="_blank">
-          <img src="images/sponsor_06.jpg" alt="Latet" />
+          <%= image_tag "sponsor_06.jpg", alt: "Latet" %>
         </a>
       </li>
     </ul>
