--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='<%= data.generic.seo.description %>' name='description'>
+    <link href='<%= data.generic.settings.domain %>' rel='canonical'>
+    <link href='http://www.google-analytics.com' rel='dns-prefetch'>
 
     <!-- Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
