--- a/source/stylesheets/footer.css.scss
+++ b/source/stylesheets/footer.css.scss
@@ -39,7 +39,6 @@
 
 .foot-middle {
   .mail-icon {
-    margin-right: 70px;
     margin-top: 30px;
     margin-bottom: 20px;
   }
@@ -96,41 +95,45 @@
   font-family: 'Open Sans Hebrew', sans-serif;
 
   .credits {
-    h5 {
-      display: inline-block;
-      border-bottom: 1px solid #fff;
-      margin-bottom: 10px;
-      font-size: 20px;
-      font-weight: bold;
-    }
+    // h5 {
+    //   display: inline-block;
+    //   border-bottom: 1px solid #fff;
+    //   margin-bottom: 10px;
+    //   font-size: 20px;
+    //   font-weight: bold;
+    // }
     a {
-      color: #FFF;
+      color: #ffffff;
       text-decoration: none;
+      line-height: 40px;
     }
     .description {
-      font-family: open-sans;
       font-size: 16px;
       color: #ffffff;
-      margin-top: 12px;
-      line-height: 18px;
+      line-height: 40px;
     }
   }
 }
-.foot-subscrb-title {
-  span {
-    float: right;
-    padding-left: 130px;
-  }
-  img {
-    position: absolute;
-    left: 50px;
-    top: 0;
-  }
-  font-size: 20px;
+.foot-title {
+  font-size: 21px;
   font-weight: bold;
-  margin-bottom: 10px;
+  color: #ffffff;
+  margin-bottom: 15px;
+  line-height: 28px;
 }
 
+.links{
+  a {
+    font-size: 16px;
+    color: #ffffff;
+    line-height: 30px;
+  }
+}
+
+.btn {
+  padding: 2px 11px;
+  font-size: 26px;
+}
 .foot-subscrb {
   position: relative;
   .form-group {
