--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content='<%= data.generic.seo.description %>' name='description'>
+    <% ogp_tags do|name, value| %>
+      <meta property=<%= name %> content=<%= value %> >
+    <% end %>
     <link href='<%= data.generic.settings.domain %>' rel='canonical'>
     <link href='http://www.google-analytics.com' rel='dns-prefetch'>
-
     <!-- Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
