--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -16,7 +16,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <!-- Styles -->
     <%= stylesheet_link_tag "application" %>
-
+    <%= partial "layouts/favicon" %>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
